@@ -1398,7 +1398,7 @@ process_request( IN http_message_t * req,
         // Transfer-Encoding: chunked
         if (http_MakeMessage(
             headers, resp_major, resp_minor,
-            "R" "T" "GKD" "s" "tcS" "Xc" "sCc",
+            "R" "T" "GKLD" "s" "tcS" "Xc" "sCc",
             HTTP_PARTIAL_CONTENT,           // status code
             finfo.content_type,   // content type
             RespInstr,                      // range info
@@ -1413,7 +1413,7 @@ process_request( IN http_message_t * req,
         // Transfer-Encoding: chunked
         if (http_MakeMessage(
             headers, resp_major, resp_minor,
-            "R" "N" "T" "GD" "s" "tcS" "Xc" "sCc",
+            "R" "N" "T" "GLD" "s" "tcS" "Xc" "sCc",
             HTTP_PARTIAL_CONTENT,           // status code
             RespInstr->ReadSendSize,        // content length
             finfo.content_type,       // content type
@@ -1430,7 +1430,7 @@ process_request( IN http_message_t * req,
         // Transfer-Encoding: chunked
         if (http_MakeMessage(
             headers, resp_major, resp_minor,
-            "RK" "TD" "s" "tcS" "Xc" "sCc",
+            "RK" "TLD" "s" "tcS" "Xc" "sCc",
             HTTP_OK,                        // status code
             finfo.content_type, // content type
             "LAST-MODIFIED: ",
@@ -1446,7 +1446,7 @@ process_request( IN http_message_t * req,
             // Transfer-Encoding: chunked
             if (http_MakeMessage(
                 headers, resp_major, resp_minor,
-                "R" "N" "TD" "s" "tcS" "Xc" "sCc",
+                "R" "N" "TLD" "s" "tcS" "Xc" "sCc",
                 HTTP_OK,                        // status code
                 RespInstr->ReadSendSize,        // content length
                 finfo.content_type,      // content type
@@ -1461,7 +1461,7 @@ process_request( IN http_message_t * req,
             // Transfer-Encoding: chunked
             if (http_MakeMessage(
                 headers, resp_major, resp_minor,
-                "R" "TD" "s" "tcS" "b" "Xc" "sCc",
+                "R" "TLD" "s" "tcS" "b" "Xc" "sCc",
                 HTTP_OK,                        // status code
                 finfo.content_type, // content type
                 "LAST-MODIFIED: ",
@@ -1751,7 +1751,7 @@ web_server_callback( IN http_parser_t * parser,
 
                 http_MakeMessage(
                     &headers, 1, 1,
-                    "RTDSXcCc",
+                    "RLTDSXcCc",
                     ret,
                     "text/html",
                     X_USER_AGENT );
